syntax="proto3";

package filebank;

option go_package = "./proto";

service FileBankService {
  rpc AddNode(AddNodeRequest) returns (AddNodeResponse);

  rpc UploadFiles(stream UploadFilesRequest)
    returns (stream UploadFilesResponse);
    
  rpc DownloadFiles(stream DownloadFilesRequest)
    returns (stream DownloadFilesResponse);
}

message AddNodeRequest {
  bytes nonce = 1;
}

message AddNodeResponse {
  bytes nonce = 1;
  bytes pubkey = 2;
  bytes signature = 3;
}

message UploadFilesRequest {
  oneof phase {
    ChallengeResponse signed_resp = 5;
    FileMessage file = 6;
    bytes nonce = 7;
  }
}

message UploadFilesResponse {
  oneof phase {
    bytes nonce = 4;
    MerkleRoot merkle_response = 5;
  }
}

message ChallengeResponse {
  bytes nonce = 1;
  bytes pubkey = 2;
  int32 nbfiles = 3;
  bytes signature = 4;
}

message FileMessage {
  int32 seq = 1;
  bytes content = 2;
}

message MerkleRoot {
  bytes nonce = 1;
  bytes merkle_root = 2;
  bytes signature = 3;
}

message DownloadFilesRequest {
  bytes nonce = 1;
  string pub_key_addr = 2;
  int32 file_num = 3;
  bytes signature = 4;
}

message DownloadFilesResponse {
  oneof phase {
    bytes nonce = 3;
    FileAndProof fp = 4;
  }
}

message FileAndProof {
  bytes proof = 1;
  bytes file = 2;
}