syntax="proto3";

package filebank;

option go_package = "./proto";

/**
 * Messages for formatting and serialization
 * before signature by client and server
*/

message SignAddNodeServer {
  bytes nonce = 1;
  bytes pub_key = 2;
}

message SignUploadRequestClient {
  bytes nonce = 1;
  bytes pub_key = 2;
  int32 nbfiles = 3;
}

message SignMerkleRootServer {
  bytes nonce = 1;
  bytes merkle_root = 2;
}
